# church-slide-generator

./: .gitignore  LICENSE  PROJECT_BRIEF.md  README.md  ROADMAP.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __main__.py  config.py  main.py  parsing.py  schemas.py  slides.py
backend/assets/: songs_db.json
backend/scripts/: extract_songs.py
backend/tests/: test_api.py  test_parsing.py  test_slides.py
backend/tests/fixtures/: because_he_lives.txt  special_chars.txt
frontend/: index.html  package-lock.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: GenerateButton.tsx  LyricsInput.tsx  OrderInput.tsx  SlidePreview.tsx
reference/: prototype.py
