[project]
name = "church-slide-generator"
version = "0.1.0"
description = "Backend for generating church song slides as PDF"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "img2pdf>=0.6.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
